--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -6,6 +6,12 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+@font-face {
+    font-family: "Shrikhand-Regular";
+    src: url("/assets/fonts/Shrikhand-Regular.ttf");
+    font-display: swap;
+}
+
 * {
     box-sizing: border-box;
 }
