--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,13 +1,8 @@
 .main {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: auto;
-    height: 100%;
-    max-height: 100vh;
-    max-width: 100vw;
-    aspect-ratio: 1080 / 1920;
+    max-width: min(400px, 100vw);
+    overflow-y: hidden;
+    margin: 0px auto;
+    height: 100vh;
     background-color: #0d5899;
 
     display: flex;
