--- a/src/styles/Result.module.css
+++ b/src/styles/Result.module.css
@@ -7,20 +7,348 @@
     flex-direction: column;
     align-items: center;
 
-    padding: 12px 24px;
+    padding: 12px 0px 0px;
 
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    max-width: 100vw;
-    aspect-ratio: 1080 / 1920;
-    width: auto;
-    height: 100%;
+    max-width: min(400px, 100vw);
+    overflow-y: hidden;
+    margin: 0px auto;
 }
 
 .canvas {
     margin-top: 20px;
     max-width: 300px;
+
+    z-index: 2;
+}
+
+.buttonContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background: #0d5899;
+
+    width: 100%;
+    padding: 250px 0px 60px;
+    margin-top: -240px;
+
+    z-index: 0;
+}
+
+.rankingContainer {
+    padding: 20px 0px 60px;
+    width: 100%;
+}
+
+.rankingContainer h1 {
+    font-family: Shrikhand-Regular;
+    font-size: 40px;
+    text-align: center;
+
+    color: white;
+    letter-spacing: 2px;
+    text-shadow: -1px -1px 0 #0d5899, 1px -1px 0 #0d5899, -1px 1px 0 #0d5899,
+        1px 1px 0 #0d5899;
+}
+
+.rankingCard {
+    background: white;
+    padding: 20px 20px 40px 20px;
+    border-radius: 20px;
+
+    width: 80%;
+    margin: 0px auto;
+
+    position: relative;
+
+    box-shadow: 0px 10px 0px #0d5899;
+}
+
+.rankingItem {
+    position: relative;
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    border-bottom: 1px solid #0d5899;
+    padding: 12px 0px;
+}
+
+.rankNameContainer {
+    display: flex;
+    align-items: center;
+    z-index: 1;
+}
+
+.topRank {
+    background: url("/assets/rank.png");
+    background-size: contain;
+    background-repeat: no-repeat;
+    font-family: Shrikhand-Regular;
+    color: white;
+    font-size: 22px;
+
+    width: 36px;
+    height: 36px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.normalRank {
+    color: #ff6b54;
+    font-size: 22px;
+    font-family: Shrikhand-Regular;
+}
+
+.name {
+    color: #0d5899;
+    font-weight: 700;
+}
+
+.score {
+    color: #3db1f2;
+    font-weight: 700;
+    font-family: Shrikhand-Regular;
+
+    z-index: 1;
+}
+
+.dots {
+    color: #0d5899;
+    font-size: 40px;
+    text-align: center;
+    transform: rotate(90deg);
+    padding: 12px 0px;
+}
+
+.me {
+    position: absolute;
+    width: calc(100% + 64px);
+    height: calc(100% + 14px);
+    top: -6x;
+    left: -32px;
+
+    background: white;
+    z-index: 0;
+
+    border: 10px solid #ff6b54;
+    border-radius: 8px;
+
+    outline: 1px solid #0d5899;
+}
+
+.me::before {
+    position: absolute;
+
+    content: "";
+    width: calc(100% + 6px);
+    height: calc(100% + 6px);
+    top: -3px;
+    left: -3px;
+    border-radius: 8px;
+    border: 1px solid #0d5899;
+
+    background: white;
+}
+
+.chanceContainer {
+    background: #ff6b54;
+    padding: 40px 0px;
+
+    width: 100%;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.chanceContainer h1 {
+    font-family: JinHeiFont;
+    font-size: 32px;
+    text-align: center;
+
+    color: white;
+    font-weight: 500;
+
+    margin-bottom: 40px;
+}
+
+.chanceItem {
+    background: white;
+    width: min(300px, calc(100% - 24px));
+
+    border-radius: 20px;
+    padding: 14px 56px 14px 32px;
+
+    position: relative;
+
+    color: black;
+
+    display: flex;
+    align-items: center;
+
+    margin-bottom: 24px;
+}
+
+.imageWrapper {
+    width: 70px;
+    height: 70px;
+
+    position: absolute;
+    left: -36px;
+
+    top: 50%;
+    transform: translateY(-50%);
+
+    display: flex;
+    align-items: center;
+}
+
+.imageWrapper img {
+    width: 100%;
+}
+
+.textContainer {
+    margin-left: 12px;
+}
+
+.itemTitle {
+    font-family: JinHeiFont;
+    font-weight: 500;
+    color: #0d5899;
+    font-size: 18px;
+}
+
+.itemDescription {
+    color: #0d5899;
+    font-size: 14px;
+    margin-top: 4px;
+}
+
+.itemNumberContainer {
+    background: #3db1f2;
+    padding: 12px;
+    border-radius: 100%;
+
+    position: absolute;
+    right: -30px;
+
+    color: #0d5899;
+    border: 1px solid #0d5899;
+
+    display: flex;
+    align-items: center;
+
+    line-height: 1;
+}
+
+.itemNumber {
+    font-family: Shrikhand-Regular;
+    margin-left: 8px;
+    font-size: 24px;
+}
+
+.infoBgContainer {
+    background: url("/assets/footer-bg.png") #0d5899;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 330px;
+}
+
+.infoContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    padding: 28px;
+}
+
+.dateInfoContainer {
+    display: flex;
+    flex-direction: column;
+
+    margin-left: 40px;
+}
+
+.dateContainer {
+    font-family: Shrikhand-Regular;
+    color: #0d5899;
+    font-size: 24px;
+}
+
+.dateSeparater {
+    display: inline-block;
+    margin: 0px 8px;
+    border-bottom: 2px solid #0d5899;
+    width: 52px;
+}
+
+.addressContainer {
+    display: flex;
+    align-items: center;
+}
+
+.address {
+    font-family: JinHeiFont;
+    color: white;
+    font-size: 18px;
+}
+
+.standPos {
+    font-family: Shrikhand-Regular;
+    background: #ff6b54;
+    color: white;
+    font-size: 18px;
+
+    line-height: 1;
+    display: inline-block;
+    height: 16px;
+    margin-left: 8px;
+}
+
+.date,
+.date {
+    position: relative;
+}
+
+.date::before {
+    content: "";
+    position: absolute;
+    font-family: Shrikhand-Regular;
+
+    color: white;
+    font-size: 14px;
+    border: 1px solid white;
+    border-radius: 50%;
+    padding: 4px 8px;
+    line-height: 1;
+    right: -24px;
+    top: -12px;
+    transform: rotate(20deg);
+}
+
+.dateTue::before {
+    content: "TUE";
+}
+
+.dateMon::before {
+    content: "MON";
+}
+
+.footer {
+    background: #0d5899;
+    height: 100px;
+    width: 100%;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.footer img {
+    height: 80px;
 }
 
