--- a/src/styles/Start.module.css
+++ b/src/styles/Start.module.css
@@ -3,9 +3,8 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-
     width: 100%;
-
+    height: 100%;
     z-index: 1;
 }
 
