--- a/src/styles/Result.module.css
+++ b/src/styles/Result.module.css
@@ -41,6 +41,10 @@
 .rankingContainer {
     padding: 20px 0px 60px;
     width: 100%;
+
+    background: url("/assets/result-bg.png"), #3db1f2;
+    background-repeat: repeat;
+    background-size: cover;
 }
 
 .rankingContainer h1 {
