--- a/src/styles/Intro.module.css
+++ b/src/styles/Intro.module.css
@@ -7,11 +7,14 @@
 }
 
 .container {
+    position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
 
     z-index: 0;
+
+    padding: 24px;
 }
 
 .input {
@@ -27,10 +30,11 @@
 
 .p {
     margin-top: 30px;
-    font-size: 20px;
+    font-size: 18px;
     text-align: center;
-    line-height: 1;
+    line-height: 0.9;
     white-space: pre-line;
+    font-weight: 500;
 }
 
 .card {
@@ -62,5 +66,6 @@
 .item p {
     margin: 0;
     margin-top: 8px;
+    font-weight: 500;
 }
 
