--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,6 +1,6 @@
 .main {
     max-width: min(800px, 100vw);
-    aspect-ratio: 1080 / 1920;
+    /* aspect-ratio: 1080 / 1920; */
     overflow-y: hidden;
     margin: 0px auto;
     height: 100dvh;
