--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -12,7 +12,7 @@
     top: 0;
 
     width: 100%;
-    /* height: 100vh; */
+    height: 100vh;
     overflow: hidden;
     display: flex;
     justify-content: center;
