--- a/src/styles/Start.module.css
+++ b/src/styles/Start.module.css
@@ -14,8 +14,7 @@
     background: #3db1f2;
     border-radius: 1000px;
     border: 8px solid white;
-
-    width: 90%;
+    height: 70%;
     aspect-ratio: 0.5874;
     margin-bottom: 40px;
 
