--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -4,6 +4,8 @@
     overflow-y: hidden;
     margin: 0px auto;
     background-color: #0d5899;
+
+    position: relative;
 }
 
 .gameContainer {
@@ -11,8 +13,7 @@
     left: 0;
     top: 0;
 
-    width: 100%;
-    height: 100vh;
+    height: 100dvh;
     overflow: hidden;
     display: flex;
     justify-content: center;
