--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -13,10 +13,8 @@
     left: 0;
     top: 0;
 
+    width: 100%;
     height: 100dvh;
     overflow: hidden;
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
