--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,6 +4,8 @@ body {
     color: rgba(255, 255, 255, 0.87);
     background-color: #f0f0f0;
     font-family: Arial, Helvetica, sans-serif;
+
+    overscroll-behavior: none;
 }
 
 @font-face {
