--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,5 +1,5 @@
 .main {
-    width: min(400px, 100dvw);
+    width: min(400px, 100vw);
     height: 100dvh;
     overflow-y: hidden;
     margin: 0px auto;
@@ -13,7 +13,7 @@
     left: 0;
     top: 0;
 
-    width: min(400px, 100dvw);
+    width: 100%;
     height: 100dvh;
     overflow: hidden;
 }
