--- a/src/styles/Loading.module.css
+++ b/src/styles/Loading.module.css
@@ -1,3 +1,11 @@
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+}
+
 .illustration {
     align-self: center;
 }
