--- a/src/styles/Result.module.css
+++ b/src/styles/Result.module.css
@@ -7,11 +7,14 @@
     flex-direction: column;
     align-items: center;
 
-    padding: 12px 0px 0px;
+    padding: 24px 0px 0px;
 
-    max-width: min(1024px, 100vw);
-    aspect-ratio: 1080 / 1920;
+    width: min(400px, 100vw);
     margin: 0px auto;
+}
+
+.logo {
+    width: 240px;
 }
 
 .canvas {
