fix: chance item

--- a/src/styles/Result.module.css
+++ b/src/styles/Result.module.css
@@ -50,15 +50,10 @@
     background-size: cover;
 }
 
-.rankingContainer h1 {
-    font-family: Shrikhand-Regular;
-    font-size: 40px;
-    text-align: center;
-
-    color: white;
-    letter-spacing: 2px;
-    text-shadow: -1px -1px 0 #0d5899, 1px -1px 0 #0d5899, -1px 1px 0 #0d5899,
-        1px 1px 0 #0d5899;
+.rankingTitle {
+    display: block;
+    margin: 24px auto;
+    width: 240px;
 }
 
 .rankingCard {
@@ -82,7 +77,7 @@
     align-items: center;
 
     border-bottom: 1px solid #0d5899;
-    padding: 12px 0px;
+    padding: 8px 0px;
 }
 
 .rankNameContainer {
@@ -145,7 +140,7 @@
     z-index: 0;
 
     border: 10px solid #ff6b54;
-    border-radius: 8px;
+    border-radius: 12px;
 
     outline: 1px solid #0d5899;
 }
@@ -156,8 +151,8 @@
     content: "";
     width: calc(100% + 6px);
     height: calc(100% + 6px);
-    top: -3px;
-    left: -3px;
+    top: -4px;
+    left: -4px;
     border-radius: 8px;
     border: 1px solid #0d5899;
 
@@ -177,7 +172,7 @@
 
 .chanceContainer h1 {
     font-family: JinHeiFont;
-    font-size: 32px;
+    font-size: 36px;
     text-align: center;
 
     color: white;
@@ -188,10 +183,10 @@
 
 .chanceItem {
     background: white;
-    width: min(300px, calc(100% - 24px));
+    width: min(272px, calc(100% - 24px));
 
     border-radius: 20px;
-    padding: 14px 56px 14px 32px;
+    padding: 14px 56px 14px 36px;
 
     position: relative;
 
@@ -212,13 +207,13 @@
 
     top: 50%;
     transform: translateY(-50%);
-
-    display: flex;
-    align-items: center;
 }
 
 .imageWrapper img {
     width: 100%;
+    height: 100%;
+    object-fit: contain;
+    display: block;
 }
 
 .textContainer {
@@ -240,7 +235,7 @@
 
 .itemNumberContainer {
     background: #3db1f2;
-    padding: 12px;
+    padding: 10px 8px;
     border-radius: 100%;
 
     position: absolute;
@@ -250,14 +245,25 @@
     border: 1px solid #0d5899;
 
     display: flex;
+    justify-content: center;
     align-items: center;
 
     line-height: 1;
+    width: 72px;
+}
+
+.itemNumberContainer::before {
+    content: "";
+    border-radius: 100%;
+    position: absolute;
+    width: calc(100% - 8px);
+    height: calc(100% - 8px);
+    border: 1px solid white;
 }
 
 .itemNumber {
     font-family: Shrikhand-Regular;
-    margin-left: 8px;
+    margin-left: 4px;
     font-size: 24px;
 }
 
