--- a/src/styles/Result.module.css
+++ b/src/styles/Result.module.css
@@ -8,6 +8,7 @@
     align-items: center;
 
     padding: 24px 0px 0px;
+    overflow-y: hidden;
 
     /* width: min(400px, 100vw); */
     margin: 0px auto;
