--- a/src/styles/Result.module.css
+++ b/src/styles/Result.module.css
@@ -8,7 +8,8 @@
     align-items: center;
 
     padding: 24px 0px 0px;
-    overflow-y: hidden;
+    width: 100%;
+    overflow-x: hidden;
 
     /* width: min(400px, 100vw); */
     margin: 0px auto;
