--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,5 +1,4 @@
 .main {
-    width: min(400px, 100vw);
     height: 100dvh;
     overflow-y: hidden;
     margin: 0px auto;
@@ -16,5 +15,11 @@
     width: 100%;
     height: 100dvh;
     overflow: hidden;
+}
+
+.resizeContent {
+    transform-origin: top center;
+    width: 400px;
+    margin: 0px auto;
 }
 
