--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -19,7 +19,7 @@
 
 .resizeContent {
     transform-origin: top center;
-    width: 400px;
+    width: min(400px, 100vw);
     margin: 0px auto;
 }
 
