fix: center start section

--- a/src/styles/Start.module.css
+++ b/src/styles/Start.module.css
@@ -1,3 +1,13 @@
+.resizeContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+
+    transform-origin: center;
+}
+
 .startContainer {
     display: flex;
     flex-direction: column;
