--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     padding: 0;
-    color: rgba(255, 255, 255, 0.87);
+    color: rgba(255, 255, 255);
     background-color: #f0f0f0;
     font-family: Arial, Helvetica, sans-serif;
 
