--- a/src/styles/Intro.module.css
+++ b/src/styles/Intro.module.css
@@ -1,6 +1,16 @@
+.resizeContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+
+    transform-origin: center;
+}
+
 .h1 {
     font-family: Shrikhand-Regular, sans-serif;
-    font-size: 60px;
+    font-size: 48px;
     letter-spacing: 1px;
     text-align: center;
     margin: 0;
@@ -14,7 +24,7 @@
 
     z-index: 0;
 
-    padding: 24px;
+    padding: 24px 48px;
 }
 
 .input {
