--- a/src/styles/Result.module.css
+++ b/src/styles/Result.module.css
@@ -1,8 +1,4 @@
 .main {
-    background: url("/assets/result-bg.png"), #3db1f2;
-    background-repeat: repeat;
-    background-size: contain;
-
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -13,6 +9,17 @@
 
     /* width: min(400px, 100vw); */
     margin: 0px auto;
+}
+
+.bg {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-image: url("/assets/result-bg.svg");
+    background-size: 45vw;
+    z-index: -1;
 }
 
 .logo {
@@ -47,9 +54,9 @@
     padding: 20px 0px 60px;
     width: 100%;
 
-    background: url("/assets/result-bg.png"), #3db1f2;
-    background-repeat: repeat;
-    background-size: cover;
+    /* background: url("/assets/result-bg.png"), #3db1f2; */
+    /* background-repeat: repeat; */
+    /* background-size: cover; */
 }
 
 .rankingTitle {
