--- a/src/styles/Result.module.css
+++ b/src/styles/Result.module.css
@@ -26,17 +26,6 @@
     width: 240px;
 }
 
-.canvas {
-    margin-top: 20px;
-    z-index: 2;
-
-    height: 500px;
-
-    @media screen and (min-width: 768px) and (max-width: 1024px) {
-        height: 700px;
-    }
-}
-
 .buttonContainer {
     display: flex;
     flex-direction: column;
@@ -53,10 +42,6 @@
 .rankingContainer {
     padding: 20px 0px 60px;
     width: 100%;
-
-    /* background: url("/assets/result-bg.png"), #3db1f2; */
-    /* background-repeat: repeat; */
-    /* background-size: cover; */
 }
 
 .rankingTitle {
@@ -281,7 +266,7 @@
 }
 
 .infoBgContainer {
-    background: url("/assets/footer-bg.png") #0d5899;
+    background: #3db1f2;
     background-repeat: no-repeat;
     background-size: cover;
     width: 100%;
@@ -289,9 +274,16 @@
 }
 
 .infoContainer {
+    background: url("/assets/footer-bg.png") #0d5899;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: min(400px, 100vw);
+    height: 100%;
+    margin: 0px auto;
+
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
 
     padding: 28px;
 }
