--- a/src/styles/ResultImage.module.css
+++ b/src/styles/ResultImage.module.css
@@ -52,7 +52,8 @@
     color: #0d5899;
     font-size: 14px;
     font-family: "Noto Sans TC";
-    font-weight: 700;
+    font-weight: 600;
+    letter-spacing: 1px;
 }
 
 .textContainer p {
