--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -6,6 +6,8 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 
     overscroll-behavior: none;
+
+    overflow-x: hidden;
 }
 
 @font-face {
