--- a/src/styles/Intro.module.css
+++ b/src/styles/Intro.module.css
@@ -25,6 +25,10 @@
     z-index: 0;
 
     padding: 24px 48px;
+
+    @media screen and (min-width: 1024px) {
+        padding: 48px;
+    }
 }
 
 .input {
