fix: 修正手機容器溢出

--- a/src/styles/Result.module.css
+++ b/src/styles/Result.module.css
@@ -165,6 +165,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    overflow-x: hidden;
 }
 
 .chanceContainer h1 {
